# lib/units/api/paths/builds/{id}/scenarios.js
@@ -1,0 +1,7 @@
+// builds
+
+import {setBuildScenarios} from '../../../controllers/builds.js'
+
+export function put(req, res) {
+    return setBuildScenarios(req, res)
+}
